--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: perairan_ngale
 description: "Perairan Air Desa Ngale"
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: ">=3.3.3 <4.0.0"
 
 dependencies:
   another_flushbar: ^1.12.30
@@ -40,8 +40,6 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   sqflite: ^2.3.3
   unicons: ^2.1.1
-
-
 
 dev_dependencies:
   auto_route_generator: ^8.0.0
