--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_svg_provider: ^1.0.7
   freezed_annotation: ^2.4.1
+  get: ^4.6.6
   get_it: ^7.7.0
   google_fonts: ^6.2.1
   iconsax_plus: ^1.0.0
