--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   get: ^4.6.6
   get_it: ^7.7.0
   google_fonts: ^6.2.1
+  google_sign_in: ^6.2.1
   iconsax_plus: ^1.0.0
   intl: ^0.18.1
   json_annotation: ^4.9.0
