--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   unicons: ^2.1.1
   paginate_firestore: any
   firebase_ui_firestore: ^1.6.3
+  firebase_pagination: ^3.1.0
 
 dev_dependencies:
   auto_route_generator: ^8.0.0
