--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   paginate_firestore: any
   firebase_ui_firestore: ^1.6.3
   firebase_pagination: ^3.1.0
+  syncfusion_flutter_datagrid: ^20.3.61
+  firebase_storage: ^11.7.7
+  image_picker: ^1.1.1
 
 dev_dependencies:
   auto_route_generator: ^8.0.0
