--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   syncfusion_flutter_datagrid: ^20.3.61
   firebase_storage: ^11.7.7
   image_picker: ^1.1.1
+  syncfusion_flutter_datagrid_export: ^20.4.54-beta
+  syncfusion_flutter_xlsio: ^20.4.54-beta
+  path_provider: ^2.1.3
+  open_file: ^3.3.2
 
 dev_dependencies:
   auto_route_generator: ^8.0.0
