--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,13 +45,15 @@ dependencies:
   paginate_firestore: any
   firebase_ui_firestore: ^1.6.3
   firebase_pagination: ^3.1.0
-  syncfusion_flutter_datagrid: ^20.3.61
   firebase_storage: ^11.7.7
   image_picker: ^1.1.1
-  syncfusion_flutter_datagrid_export: ^20.4.54-beta
-  syncfusion_flutter_xlsio: ^20.4.54-beta
+  syncfusion_flutter_core: 25.1.39
+  syncfusion_flutter_datagrid: 25.1.39
+  syncfusion_flutter_datagrid_export: 25.1.39
+  syncfusion_flutter_pdf: 25.1.39
   path_provider: ^2.1.3
   open_file: ^3.3.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   auto_route_generator: ^8.0.0
