--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   path_provider: ^2.1.3
   open_file: ^3.3.2
   permission_handler: ^11.3.1
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   auto_route_generator: ^8.0.0
