--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
 name: perairan_ngale
-description: 'Perairan Air Desa Ngale'
-publish_to: 'none'
+description: "Perairan Air Desa Ngale"
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: ">=3.3.3 <4.0.0"
 
 dependencies:
   another_flushbar: ^1.12.30
+  animated_custom_dropdown: 3.0.0
   auto_route: ^8.1.3
   bloc: ^8.1.3
   cloud_firestore: ^4.17.2
