--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: perairan_ngale
-description: "Perairan Air Desa Ngale"
-publish_to: "none"
+description: 'Perairan Air Desa Ngale'
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.3.3 <4.0.0"
+  sdk: '>=3.3.3 <4.0.0'
 
 dependencies:
   another_flushbar: ^1.12.30
@@ -30,7 +30,7 @@ dependencies:
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.1
   iconsax_plus: ^1.0.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   json_annotation: ^4.9.0
   just_audio: ^0.9.37
   logger: ^2.2.0
