--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.1
   iconsax_plus: ^1.0.0
-  intl: ^0.19.0
+  intl: 0.18.1
   json_annotation: ^4.9.0
   just_audio: ^0.9.37
   logger: ^2.2.0
