--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_pagination: ^3.1.0
   firebase_storage: ^11.7.7
   image_picker: ^1.1.1
+  syncfusion_flutter_charts: 25.1.39
   syncfusion_flutter_core: 25.1.39
   syncfusion_flutter_datagrid: 25.1.39
   syncfusion_flutter_datagrid_export: 25.1.39
@@ -54,6 +55,7 @@ dependencies:
   open_file: ^3.3.2
   permission_handler: ^11.3.1
   fl_chart: ^0.68.0
+  vector_math: ^2.1.4
 
 dev_dependencies:
   auto_route_generator: ^8.0.0
