--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   open_file: ^3.3.2
   permission_handler: ^11.3.1
   fl_chart: ^0.68.0
+  cool_dropdown: ^2.1.0
 
 dev_dependencies:
   auto_route_generator: ^8.0.0
