--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -6,5 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application>
         android:usesCleartextTraffic="true"
+        android:name="androidx.multidex.MultiDexApplication" >
     </application>
 </manifest>
